<resources>
    <string name="app_name">GoGoGatchi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create an Account</string>
    <string name="login">Log-In</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="upload_profile_pic"> Upload Picture</string>
    <string name="update_profile_settings"> Update Profile Settings</string>
    <string name="update_companion_settings"> Update Companion Settings</string>
    <string name="interests">Interests-</string>
    <string name="amusement_park">Amusement Park</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="bar">Bar</string>
    <string name="cafe">Cafe</string>
    <string name="campground">Campground</string>
    <string name="lodging">Lodging</string>
    <string name="movie_theatre">Movie Theatre</string>
    <string name="night_club">Night Club</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="shopping_mall">Shopping Mall</string>
    <string name="stadium">Stadium</string>
    <string name="travel_agency">Travel Agency</string>
    <string name="museum">Museum</string>
    <string name="zoo">Zoo</string>
    <string name="location">Allow Location Access</string>
    <string name="notifications">Allow Push Notifications</string>
    <string name="distance">Select Distance to Search</string>
    <string name="miles">miles</string>
    <string name="reviews">See Reviews</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_icon">menu_icon</string>
    <string name="news"> news_icon</string>
    <string name="title_activity_monster_hatch">MonsterHatchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="companion">[Insert quirky location facts here]</string>
    <string name="no_idea">Looks like we\'re out of ideas. Please tap here to refresh.</string>
    <string name="call_location">Call</string>
    <string name="companionFarm">Companion</string>
    <string name="profile">profile</string>
    <string name="locationView">Location Details</string>
    <string name="settings">Settings</string>
    <string name="newsFeed">Feed</string>
    <string name="profileLarge">Profile</string>
    <string name="register2">Register</string>
    <string name="optional">Optional</string>
    <string name="display_name">Display Name</string>
    <string-array name="age">
        <item>Select Option..</item>
        <item>Below 18</item>
        <item>18–24</item>
        <item>25–34</item>
        <item>35–44</item>
        <item>45–54</item>
        <item>65 or more</item>
    </string-array>
    <string name="passwordHint">Password (min. 6 char)</string>
    <string name="passwordHintCheck">Re-Enter Password</string>
    <string-array name="gender">
        <item>Select Option..</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="checkEmail">Re-Enter Email</string>
    <string name="termsConditions">Privacy</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="textview">TextView</string>
    <string name="visit_website">Visit Website</string>
    <string name="TermsAndConditions">Terms and Conditions</string>
    <string name="TermsText">Terms of Service ("Terms")
==========================

Last updated: August 12, 2018

Please read these Terms of Service ("Terms", "Terms of Service") carefully
before using the http://www.GoGoGatchi.com website (the "Service") operated by
GoGoGatchi ("us", "we", or "our").

Your access to and use of the Service is conditioned on your acceptance of and
compliance with these Terms. These Terms apply to all visitors, users and
others who access or use the Service.

By accessing or using the Service you agree to be bound by these Terms. If you
disagree with any part of the terms then you may not access the Service. This
Terms of Service agreement for GoGoGatchi is [based on the Terms and
Conditions from TermsFeed](https://termsfeed.com/terms-conditions/generator/).

Accounts
--------

When you create an account with us, you must provide us information that is
accurate, complete, and current at all times. Failure to do so constitutes a
breach of the Terms, which may result in immediate termination of your account
on our Service.

You are responsible for safeguarding the password that you use to access the
Service and for any activities or actions under your password, whether your
password is with our Service or a third-party service.

You agree not to disclose your password to any third party. You must notify us
immediately upon becoming aware of any breach of security or unauthorized use
of your account.

Links To Other Web Sites
------------------------

Our Service may contain links to third-party web sites or services that are
not owned or controlled by GoGoGatchi.

GoGoGatchi has no control over, and assumes no responsibility for, the
content, privacy policies, or practices of any third party web sites or
services. You further acknowledge and agree that GoGoGatchi shall not be
responsible or liable, directly or indirectly, for any damage or loss caused
or alleged to be caused by or in connection with use of or reliance on any
such content, goods or services available on or through any such web sites or
services.

We strongly advise you to read the terms and conditions and privacy policies
of any third-party web sites or services that you visit.

Termination
-----------

We may terminate or suspend access to our Service immediately, without prior
notice or liability, for any reason whatsoever, including without limitation
if you breach the Terms.

All provisions of the Terms which by their nature should survive termination
shall survive termination, including, without limitation, ownership
provisions, warranty disclaimers, indemnity and limitations of liability.

We may terminate or suspend your account immediately, without prior notice or
liability, for any reason whatsoever, including without limitation if you
breach the Terms.

Upon termination, your right to use the Service will immediately cease. If you
wish to terminate your account, you may simply discontinue using the Service.

All provisions of the Terms which by their nature should survive termination
shall survive termination, including, without limitation, ownership
provisions, warranty disclaimers, indemnity and limitations of liability.

Governing Law
-------------

These Terms shall be governed and construed in accordance with the laws of
California, United States, without regard to its conflict of law provisions.

Our failure to enforce any right or provision of these Terms will not be
considered a waiver of those rights. If any provision of these Terms is held
to be invalid or unenforceable by a court, the remaining provisions of these
Terms will remain in effect. These Terms constitute the entire agreement
between us regarding our Service, and supersede and replace any prior
agreements we might have between us regarding the Service.

Changes
-------

We reserve the right, at our sole discretion, to modify or replace these Terms
at any time. If a revision is material we will try to provide at least 30 days
notice prior to any new terms taking effect. What constitutes a material
change will be determined at our sole discretion.

By continuing to access or use our Service after those revisions become
effective, you agree to be bound by the revised terms. If you do not agree to
the new terms, please stop using the Service.

Contact Us
----------

If you have any questions about these Terms, please contact us.

</string>
</resources>