<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/txtUsernameProfile"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <TextView
        android:id="@+id/txtEmailProfile"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAgeProfile" />

    <TextView
        android:id="@+id/txtGenderProfile"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameProfile" />


    <TextView
        android:id="@+id/txtAgeProfile"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGenderProfile" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_profile" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtUsernameProfile"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtEmailProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtGenderProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtAgeProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

</android.support.constraint.ConstraintLayout>